<resources>
    <string name="app_name">Lead Pos</string>
    <string name="payment">Payment</string>
    <string name="show_products">show products</string>
    <string name="x">x</string>
    <string name="title_activity_product_catalog">ProductCatalogActivity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="ins">₪</string>
    <string name="dolor_sign">$</string>
    <string name="eur_sign">€</string>
    <string name="gbp_sign">£</string>
    <string name="refresh">Refresh</string>
    <string name="test">Test</string>
    <string name="add">Add</string>
    <string name="user_name">Employee Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="sale_type">Sale Type</string>
    <string name="sale_id">Sale Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone No</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="present">Present</string>
    <string name="log_out">Log Out</string>
    <string name="category_management">Category Management</string>
    <string name="category_product">Category Product</string>
    <string name="product_management">Product Management</string>
    <string name="offer_name">Offer Name</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="rule">Rule</string>
    <string name="product">Product</string>
    <string name="offer_management">Offer Management</string>
    <string name="rule_name">Rule Name</string>
    <string name="offer_rule_management">Offer Rule Management</string>
    <string name="go_back">Go Back</string>
    <string name="worker_management">Worker Management</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="pay_cash">Pay Cash</string>
    <string name="_cash">Cash</string>
    <string name="checks">Check</string>
    <string name="pay_by_credit_card">Pay By Credit Card</string>
    <string name="integrated_payment">Integrated Payment</string>
    <string name="sales_management">Sales Management</string>
    <string name="sales_history">Order History</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="_new">New</string>
    <string name="sales_man">Sales Man</string>
    <string name="sales_man_report">Sales Man Report</string>
    <string name="add_club"> Add Club</string>
    <string name="add_customer"> Add Customer </string>
    <string name="show_club">Show Club </string>
    <string name="show_customer">Show Customer </string>
    <string name="discount_percentage">Discount</string>
    <string name="add_customer_club">Customer Club </string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="permissions">Permissions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="_return">Return</string>
    <string name="view">View</string>
    <string name="view_sales">View Sales</string>
    <string name="amount">Amount</string>
    <string name="check_number">Check Number</string>
    <string name="date">Date</string>
    <string name="bank">Bank</string>
    <string name="branch">Branch</string>
    <string name="account">Account</string>
    <string name="import_product">Import Products</string>
    <string name="create_new_product">Create New Product</string>
    <string name="make_your_selection">Make your selection</string>
    <string name="please_insert_category_name">Please insert Category name.</string>
    <string name="please_insert_another_category_name">Please insert another category name.</string>
    <string name="success_to_add_new_category">Success To Add New Category</string>
    <string name="failed_to_add_new_category">Fail On Add New Category Please Try Again!</string>
    <string name="update_category">Update Category</string>
    <string name="please_insert_category_name_with_out_spaces">Please Insert Category Name WithOut Spaces.</string>
    <string name="order_details">OrderDetails</string>
    <string name="order">Order</string>
    <string name="provider">Provider</string>
    <string name="inventory_in">Inventory In</string>
    <string name="inventory_out">Inventory Out</string>
    <string name="view_provider">View Provider</string>
    <string name="add_new_provider">Add New Provider</string>
    <string name="please_choose_your_provider">Please Choose Your Provider</string>
    <string name="view_pull_report">View Pull Report</string>
    <string name="add_pull_report">Add Pull Report</string>
    <string name="view_deposit_report">View Deposit Report</string>
    <string name="add_deposit_report">Add Deposit Report</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="TouchPad_0">0</string>
    <string name="TouchPad_1">1</string>
    <string name="TouchPad_2">2</string>
    <string name="TouchPad_3">3</string>
    <string name="TouchPad_4">4</string>
    <string name="TouchPad_5">5</string>
    <string name="TouchPad_6">6</string>
    <string name="TouchPad_7">7</string>
    <string name="TouchPad_8">8</string>
    <string name="TouchPad_9">9</string>
    <string name="TouchPad_dot">.</string>
    <string name="TouchPad_ce">C</string>
    <string name="back">back</string>
    <string name="check_out">Check Out</string>
    <string name="empty_password">Please insert your password</string>
    <string name="wrong_password">Please insert valid password</string>
    <string name="schedule_workers">Time Attendance</string>
    <string name="products">Products</string>
    <string name="users">Employees</string>
    <string name="offers">Offers</string>
    <string name="reports">Reports</string>
    <string name="setting">Setting</string>
    <string name="backup">Backup</string>
    <string name="inventory">Inventory</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="credit_card">credit_card</string>
    <string name="other_ways">Other Ways</string>
    <string name="cash">Cash</string>
    <string name="done">Done</string>
    <string name="total">Total</string>
    <string name="given">Given</string>
    <string name="returned">Returned</string>
    <string name="cashier">Cashier</string>
    <string name="total_saved">Total Saved</string>
    <string name="vat">Vat</string>
    <string name="all">All</string>
    <string name="partial">Partial</string>
    <string name="pos_branch">Pos Branch</string>
    <string name="general">General</string>
    <string name="general_product">General Product</string>
    <string name="priceWithTax">Price</string>
    <string name="price_after_discount">Price after discount</string>
    <string name="price_before_discount">Price before discount</string>
    <string name="document">Document</string>
    <string name="receipt">Receipt</string>
    <string name="price_with_tax">Price With Tax</string>
    <string name="price_with_out_tax">Price With Out Tax</string>
    <string name="price">Price</string>
    <string name="amount_want_to_pay">Amount want to Pay</string>
    <string name="amount_of_dept">The amount of debt</string>
    <string name="order_document">Order Document</string>
    <string name="CustomerLedger">CustomerLedger</string>
    <string name="total_discount">Total Discount</string>
    <string name="invoice_receipt">InvoiceReceipt</string>
    <string name="create_order_document">Create Order Document</string>
    <string name="view_order_document">View Order Document</string>
    <string name="clearCartAlertTitle">Clear Cart</string>
    <string name="clearCartAlertMessage">Do you want to delete all the items on the cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="count">Count</string>
    <string name="multi_count">Please set product count.</string>
    <string name="multi_count_price">Please set product count.</string>
    <string name="by_card">By Card</string>
    <string name="by_phone">By Phone</string>
    <string name="number_of_payments">Number Of Payments</string>
    <string name="first_payment">First Payment</string>
    <string name="credit_type">Credit Type</string>
    <string name="transfer_credit_card">Transfer credit card</string>
    <string-array name="credit_card_type">
        
        <item>תשלומים</item>
        <item>קרדיט/קרדיט בתשלומים קבועים</item>
        
    </string-array>
    <string name="wait_for_accept">Wait for accept</string>
    <string name="please_select_item">Please Select Item From The Cart</string>
    <string name="please_add_item">Please Add Item To Cart</string>
    <string name="please_select_discount_offer">Please set discount value</string>
    <string name="pause">Pause</string>
    <string name="pause_invoice">Pause Invoice</string>
    <string name="list_of_pause_sales">List of pause sales</string>
    <string name="there_is_no_sale_on_pause">Empty</string>
    <string name="deal_number">Deal Number</string>
    <string name="resume_deal_number">Resume Deal Number</string>
    <string name="set_price">Set Price</string>
    <string name="opening_report">Opening Report</string>
    <string name="resume">Resume</string>
    <string name="discount">Discount</string>
    <string name="cancel">Cancel</string>
    <string name="tendered">Tendered</string>
    <string name="total_return">Total Return</string>
    <string name="total_paid"> TOTAL PAID</string>
    <string name="total_price">Total sales </string>
    <string name="total_required"> Required</string>
    <string name="add_check">Add Check</string>
    <string name="check_pid_error">The total checks amount does not get the total priceWithTax</string>
    <string name="not_inserted_checks">There is no checks inserted</string>
    <string name="checks_amount_more_than_amount_need">Amount inserted more than amount need</string>
    <string name="name">Name</string>
    <string name="product_code">Code</string>
    <string name="barcode">Barcode</string>
    <string name="private_company">P.C</string>
    <string name="terminal_number">Terminal No</string>
    <string name="pref_header_general">General</string>
    <string name="company_name">Company Name</string>
    <string name="tax">Vat</string>
    <string name="invoice_note">Invoice note</string>
    <string name="credit">-</string>
    <string name="confirmation">Confirmation</string>
    <string name="customer_name">Customer Name</string>
    <string name="country">Country</string>
    <string name="customer_measurement">Customer Measurement</string>
    <string name="currency">Currency</string>
    <string name="pos_setting">POS Setting</string>
    <string name="no_of_float_point">No Of Float Point</string>
    <string name="printer_type">Printer Type</string>
    <string name="version_info">Version Information</string>
    <string name="pos_version_no">Pos Version No</string>
    <string name="pos_db_version_no">Pos DB Version No</string>
    <string name="bo_version_no">Bo Version No</string>
    <string name="bo_db_version_no">Bo DB Version No</string>
    <string name="FE_version_no">Front Version No</string>
    <string name="ip" translatable="false">IP Address</string>
    <string name="pref_title_about_company_name" translatable="false">Company Name</string>
    <string name="pinpad">Pin Pad</string>
    <string name="status">Status</string>
    <string name="currency_code">Currency Code</string>
    <string name="currency_Symbol">Symbol Currency</string>
</resources>