<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:layoutDirection="rtl"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_column="0"

            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/discount"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
        <TextView
            android:layout_column="0"

            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/status"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_column="1"
            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_column="2"
            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_column="3"
            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/customer_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_column="4"
            android:background="#A9A9A9"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
        <TextView
            android:layout_column="4"
            android:background="#A9A9A9"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </TableRow>
</TableLayout>