<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:layoutDirection="rtl"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_column="0"

            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textSize="18sp"
            android:text="@string/amount"
            android:textColor="@android:color/white">
        </TextView>
        <TextView
            android:layout_column="1"
            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textColor="@android:color/white"
            android:text="@string/date"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_column="2"
            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textColor="@android:color/white"
            android:text="@string/check_number"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_column="3"
            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textColor="@android:color/white"
            android:text="@string/bank"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_column="4"
            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textColor="@android:color/white"
            android:text="@string/branch"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_column="5"
            android:gravity="right"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="#A9A9A9"
            android:textColor="@android:color/white"
            android:text="@string/account"
            android:textSize="18sp">
        </TextView>
    </TableRow>
</TableLayout>