<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_CURRENCY"
        android:title="@string/currency" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_CREDIT_CARD"
        android:title="@string/credit_card" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_PIN_PAD"
        android:title="@string/pinpad" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_CUSTOMER_MEASUREMENT"
        android:title="@string/customer_measurement" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/float_point_list_preference"
        android:entryValues="@array/float_point_list_preference"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_FLOAT_POINT_2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/no_of_float_point" />

    <ListPreference
        android:defaultValue="BTP880"
        android:entries="@array/printers_list_preference"
        android:entryValues="@array/printers_list_preference"
        android:key="LEAD_POS_RESULT_INTENT_SET_UP_MANAGEMENT_ACTIVITY_ENABLE_PRINTER_TYPE"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/printer_type" />

   <!-- &lt;!&ndash; Allows the user to choose a ringtone in the 'notification' category. &ndash;&gt;
    &lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;
    &lt;!&ndash; NOTE: RingtonePreference's summary should be set to its value by the activity code. &ndash;&gt;
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    &lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />-->

</PreferenceScreen>
